# KeyDrive

./: .gitignore  CMakeLists.txt  input_handler.cpp  input_handler.hpp  keydrive-cpp.kdev4  layout_manager.cpp  layout_manager.hpp  main.cpp  output_handler.cpp  output_handler.hpp
.kdev4/: keydrive-cpp.kdev4
layouts/: default.kbd  default.yaml  hungarian.kbd  pro.kbd
